# Count

./: Cargo.toml  README.md  meson.build
build-aux/: com.felipekinoshita.Count.json
data/: com.felipekinoshita.Count.desktop.in.in  com.felipekinoshita.Count.gschema.xml.in  com.felipekinoshita.Count.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: window.ui
po/: POTFILES  meson.build
src/: application.rs  config.rs.in  main.rs  meson.build  window.rs
src/calc/: interpreter.rs  lexer.rs  parser.rs
