[package]
name = "count"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
gsv = { package = "sourceview5", version = "0.7.1" }

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
